k8s/manifests/workloads/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
